[package]
name = "urm37"
version = "1.0.0"
edition = "2024"
authors = ["Paul TESSON <paul.tesson.officiel@gmail.com>"]
description = "Platform-agnostic no_std driver for the DFRobot URM37 V4.0 ultrasonic distance sensor (UART, PWM, Analog)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TESSON-MAKER/urm37-rs"
documentation = "https://docs.rs/urm37"
keywords = ["embedded", "driver", "ultrasonic", "urm37", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
embedded-hal       = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
embedded-io        = { version = "0.7", optional = true }
embedded-io-async  = { version = "0.7", optional = true }
defmt              = { version = "0.3", optional = true }

[features]
default = ["blocking"]

# Blocking (synchronous) UART mode (embedded-io) - activated by default
blocking = ["dep:embedded-io"]

# Async (non-blocking) UART mode (embedded-io-async)
async = ["dep:embedded-io", "dep:embedded-io-async"]

# Backward compatibility aliases
uart = ["blocking"]
uart-async = ["async"]

# PWM trigger mode (GPIO + pulse width measurement)
pwm = ["dep:embedded-hal", "dep:embedded-hal-async"]

# Analog mode (ADC)
analog = ["dep:embedded-hal"]

# defmt logging on error types
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-io = { version = "0.7" }

[[test]]
name = "protocol"
path = "tests/protocol.rs"

[[test]]
name = "eeprom_conversion"
path = "tests/eeprom_conversion.rs"

[[test]]
name = "uart_integration"
path = "tests/uart_integration.rs"
required-features = ["uart"]