[package]
name = "urm37"
version = "1.2.0"
edition = "2024"
authors = ["Paul TESSON <paul.tesson.officiel@gmail.com>"]
description = "Platform-agnostic no_std driver for the DFRobot URM37 V4.0 ultrasonic distance sensor (UART, PWM, Analog)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TESSON-MAKER/urm37-rs"
documentation = "https://docs.rs/urm37"
keywords = ["embedded", "driver", "ultrasonic", "urm37", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
# Standard hardware HALs
embedded-hal       = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
defmt              = { version = "1.0", optional = true }

# --- MULTI-VERSION SUPPORT FOR EMBEDDED-IO ---
# We use the standard name "embedded-io" for the 0.6 version to prevent conflicts with dev-dependencies!
embedded-io = { version = "0.6", optional = true }
embedded-io-async-06-crate = { package = "embedded-io-async", version = "0.6", optional = true }

# The 0.7 versions are aliased since they don't overlap with dev-dependencies
embedded-io-07-crate = { package = "embedded-io", version = "0.7", optional = true }
embedded-io-async-07-crate = { package = "embedded-io-async", version = "0.7", optional = true }

[features]
# By default, we enable blocking mode and target the embedded-io 0.6 ecosystem
default = ["blocking", "embedded-io-06"]

# I/O Version selection
embedded-io-06 = ["dep:embedded-io", "dep:embedded-io-async-06-crate"]
embedded-io-07 = ["dep:embedded-io-07-crate", "dep:embedded-io-async-07-crate"]

# Blocking (synchronous) UART mode (enabled by default)
blocking = []

# Async (non-blocking) UART mode
async = []

# Backward compatibility aliases (your test code will keep working)
uart = ["blocking"]
uart-async = ["async"]

# PWM trigger mode (GPIO + pulse width measurement)
pwm = ["dep:embedded-hal", "dep:embedded-hal-async"]

# Analog mode (ADC)
analog = ["dep:embedded-hal"]

# defmt logging on error types
defmt = ["dep:defmt"]

[dev-dependencies]
# This now matches the exact name and version of our 0.6 dependency, resolving the conflict!
embedded-io = { version = "0.6" }

[[test]]
name = "protocol"
path = "tests/protocol.rs"

[[test]]
name = "eeprom_conversion"
path = "tests/eeprom_conversion.rs"

[[test]]
name = "uart_integration"
path = "tests/uart_integration.rs"
required-features = ["uart"]